# WireTAP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: buffer-database-schema.md  capture-database-schema.md  capture-db-migrations.md  capture-flow.md  gs_usb-protocol.md  gvret-protocol.md  ingest-protocol.md  mcp-analysis-tools.md  session-flow.md  slcan-protocol.md  style_guide.md  test-pattern-protocol.md
scripts/: bump-version.js  canfd_test.py  generate-icons.sh  ios-dev.sh  macos-dev-link.sh  release.js  tauri-dev.sh  transport_test.py
src/: Candor.css  Candor.tsx  WireTAP.css  WireTAP.tsx  constants.ts  i18n.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  WireTAP-debug.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json  ios.json
src-tauri/examples/: sungrow_shx.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: README.md
src-tauri/src/: analysis.rs  apiclient.rs  app_registry.rs  ble_common.rs  ble_provision.rs  buffer_db.rs  buffer_store.rs  bufferquery.rs  buffers.rs  capture_db.rs  capture_store.rs  capturequery.rs  captures.rs  catalog.rs  checksums.rs  credentials.rs  dashboard.rs  dbc_export.rs  dbc_import.rs  dbquery.rs  device_scan.rs  framing.rs  io_test.rs  lib.rs  logging.rs  main.rs  profile_tracker.rs  replay.rs  serial_terminal.rs  sessions.rs  settings.rs  smp_upgrade.rs  store_manager.rs  telemetry.rs  transmit.rs  transmit_history.rs
src-tauri/src/flashers/: detect.rs  dfu_flasher.rs  esp_flasher.rs  mod.rs  stm32_flasher.rs
src-tauri/src/io/: codec.rs  mod.rs  multi_source.rs  periodic.rs  post_session.rs  postgres.rs  signal_throttle.rs  socketcan.rs  traits.rs  types.rs
src-tauri/src/io/broker/: merge.rs  mod.rs  spawner.rs  types.rs
src-tauri/src/io/framelink/: mod.rs  reader.rs  registry.rs  rules.rs  shared.rs
src-tauri/src/io/gs_usb/: codec.rs  linux.rs  mod.rs  nusb_driver.rs
src-tauri/src/io/gvret/: codec.rs  common.rs  mod.rs  tcp.rs  usb.rs
src-tauri/src/io/modbus_rtu/: mod.rs  reader.rs
src-tauri/src/io/modbus_tcp/: mod.rs  reader.rs  scanner.rs
src-tauri/src/io/mqtt/: mod.rs  reader.rs
src-tauri/src/io/multi_source/: merge.rs  mod.rs  spawner.rs  types.rs
src-tauri/src/io/recorded/: backend_api.rs  base.rs  capture.rs  csv.rs  mod.rs  pacing.rs  postgres.rs
src-tauri/src/io/serial/: framer.rs  mod.rs  reader.rs  utils.rs
src-tauri/src/io/slcan/: codec.rs  mod.rs  reader.rs
src-tauri/src/io/socketcan/: codec.rs  mod.rs  reader.rs
src-tauri/src/io/timeline/: base.rs  buffer.rs  capture.rs  csv.rs  mod.rs  pacing.rs  postgres.rs
src-tauri/src/io/virtual_device/: mod.rs
src-tauri/src/mcp/: bridge.rs  mod.rs  session.rs  tools.rs  types.rs
src-tauri/src/ws/: dispatch.rs  mod.rs  protocol.rs  server.rs  smp.rs
src/api/: appStatus.ts  backendApi.ts  bleProvision.ts  buffer.ts  bufferquery.ts  capture.ts  capturequery.ts  catalog.ts  clipboard.ts  dashboards.ts  dbquery.ts  deviceRegistry.ts  deviceScan.ts  dialogs.ts  flashers.ts  framelink.ts  framelinkRules.ts  gs_usb.ts  index.ts  io.ts  menu.ts  serial.ts  serialTerminal.ts  settings.ts  smpUpgrade.ts  store.ts  telemetry.ts  testPattern.ts  transmit.ts  transmitHistory.ts
src/apps/: apps.json  registry.ts
src/components/: Alert.tsx  AppLayout.tsx  AppTab.tsx  AppTabView.tsx  AppTopBar.tsx  BitPreview.tsx  ByteBits.tsx  CatalogButton.tsx  CodeView.tsx  ColourPicker.tsx  ContextMenu.tsx  DataViewController.tsx  DataViewPaginationToolbar.tsx  DataViewTabBar.tsx  DataViewTimelineSection.tsx  DeviceCard.tsx  Dialog.tsx  FilterOptionsPanel.tsx  FlashNotification.tsx  FlexSeparator.tsx  FrameIdFormatToggle.tsx  FrameLinkDevicePicker.tsx  FramePicker.tsx  FramingOptionsPanel.tsx  HeaderFieldFilter.tsx  LogoMenu.tsx  MainLayout.tsx  ManufacturerBadge.tsx  MaskBitPicker.tsx  MergedDeviceCard.tsx  PlaybackControls.tsx  ProtocolBadge.tsx  ResizableSidebar.tsx  SerialPortPicker.tsx  SessionControls.tsx  TimeBoundsInput.tsx  TimeController.tsx  TimeDisplay.tsx  TimelineScrubber.tsx  TimezoneBadge.tsx
src/dialogs/: AboutDialog.tsx  AddBookmarkDialog.tsx  BookmarkEditorDialog.tsx  BulkAddToTransmitDialog.tsx  CandorMigrationDialog.tsx  CatalogPickerDialog.tsx  ConfirmDeleteDialog.tsx  ConsentDialog.tsx  CsvFileOrderDialog.tsx  DecoderConflictDialog.tsx  DecoderInfoDialog.tsx  ErrorDialog.tsx  ExportAnalysisDialog.tsx  ExportFramesDialog.tsx  ExportReportDialog.tsx  FramePickerDialog.tsx  IoReaderPickerDialog.tsx  IoSourcePickerDialog.tsx  ReplayDialog.tsx  SaveFramesDialog.tsx  SaveSelectionSetDialog.tsx  SelectionSetPickerDialog.tsx  SendCaptureToBackendDialog.tsx  SpeedPickerDialog.tsx  TelemetryConsentDialog.tsx  ToolboxDialog.tsx  UnsavedChangesDialog.tsx
src/events/: registry.ts
src/hooks/: useAttachSourceEvents.ts  useBufferFrameView.ts  useBufferSession.ts  useCaptureSession.ts  useCatalogList.ts  useDialogManager.ts  useDiscoverySelectors.ts  useEffectiveBufferMetadata.ts  useEffectiveCaptureMetadata.ts  useFrameIdFormat.tsx  useFrameLinkDeviceLiveness.ts  useIOPickerHandlers.ts  useIOSession.ts  useIOSessionHandlers.ts  useIOSessionManager.ts  useIOSourcePickerHandlers.ts  useTheme.ts  (+11 more)
tools/bt_scan_cli/: Cargo.toml  ble.rs  main.rs  tui.rs
tools/wiretap-backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  parity_test.py  smoke_test.sh
tools/wiretap-backend/admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
tools/wiretap-backend/admin-ui/src/: App.tsx  api.ts  styles.css
tools/wiretap-backend/admin-ui/src/pages/: Activity.tsx  Databases.tsx  Health.tsx  Ingest.tsx  Keys.tsx
tools/wiretap-backend/db/: Dockerfile  backup-loop.sh  pgbackrest.conf
tools/wiretap-backend/deploy/: .env.example  README.md  docker-compose.yml
tools/wiretap-backend/src/: config.rs  db.rs  keys.rs  main.rs  running.rs  schema.rs  sql.rs  state.rs  types.rs
tools/wiretap-backend/src/http/: mod.rs
tools/wiretap-backend/src/ingest/: mod.rs  proto.rs  writer.rs
(+505 files in other folders)
