[package]
name = "candor-ui"
version = "0.3.1"
description = "Desktop UI for CANdor. CAN bus analysis and decoding toolkit."
authors = ["Alex Ferrara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "candor_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
# Keyring has no default features - must specify platform backends explicitly
keyring = { version = "3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["net", "io-util", "macros", "sync", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
once_cell = "1"
hex = "0.4"
chrono = "0.4"
async-trait = "0.1"
toml = "0.8"
serialport = "4.3"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"

# MacOS
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
nusb = { version = "0.2", features = ["tokio"] }

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
nusb = { version = "0.2", features = ["tokio"] }
windows-sys = { version = "0.59", features = ["Win32_UI_HiDpi"] }

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.3"
# sync-secret-service uses DBus Secret Service (GNOME Keyring, KWallet)
keyring = { version = "3", features = ["sync-secret-service"] }
