[package]
name = "wiretap"
version = "0.4.7"
description = "Desktop UI for WireTAP. CAN bus analysis and decoding toolkit."
authors = ["Alex Ferrara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "WireTAP"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wiretap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
# Keyring has no default features - must specify platform backends explicitly
keyring = { version = "3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["net", "io-util", "macros", "sync", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
once_cell = "1"
hex = "0.4"
chrono = "0.4"
async-trait = "0.1"
toml = "0.8"
can-dbc = "8"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# Desktop-only dependencies (serial/USB/keepawake not available on iOS)
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
serialport = "4.3"
keepawake = "0.5"

# MacOS
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
nusb = { version = "0.2", features = ["tokio"] }

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-keep-screen-on = "0.1"

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
nusb = { version = "0.2", features = ["tokio"] }
windows-sys = { version = "0.59", features = ["Win32_UI_HiDpi"] }

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.3"
# sync-secret-service uses DBus Secret Service (GNOME Keyring, KWallet)
keyring = { version = "3", features = ["sync-secret-service"] }
