[package]
name = "wiretap"
version = "0.6.4"
description = "Desktop UI for WireTAP. CAN bus analysis and decoding toolkit."
authors = ["Alex Ferrara"]
edition = "2021"
default-run = "WireTAP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "WireTAP"
path = "src/main.rs"

[[bin]]
name = "gs_usb_cli"
path = "../tools/gs_usb_cli/main.rs"
required-features = ["cli"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wiretap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
# Keyring has no default features - must specify platform backends explicitly
keyring = { version = "3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["net", "io-util", "macros", "sync", "time", "process"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
once_cell = "1"
hex = "0.4"
chrono = "0.4"
async-trait = "0.1"
toml = "0.8"
can-dbc = "8"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp"] }
tokio-tungstenite = "0.26"
rusqlite = { version = "0.32", features = ["bundled"] }
btleplug = "0.12"
futures = "0.3"
uuid = "1"
mcumgr-smp = { version = "0.8", default-features = false, features = ["transport-ble-async", "transport-udp-async", "payload-cbor"] }
mdns-sd = "0.13"
sha2 = "0.10"
framelink = { git = "ssh://git@github.com/Wired-Square/framelink-rs.git", branch = "main", features = ["discovery", "ble"] }
# Desktop-only dependencies (serial/USB/keepawake not available on iOS)
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
serialport = "4.3"
keepawake = "0.5"
# Firmware flashers — drive the ESP32 serial bootloader (esptool-style) and
# STM32 USB DFU 1.1 / DfuSe protocols. Used by the Serial app's flash tabs.
espflash = { version = "4", default-features = false, features = ["serialport"] }
dfu-core = "0.10"
dfu-nusb = "0.1"
# `dfu-nusb` 0.1 pins nusb 0.1; gs_usb uses nusb 0.2's MaybeFuture API.
# Both versions coexist — alias the 0.1 copy for DFU code only.
nusb_dfu = { package = "nusb", version = "0.1" }
# Intel HEX parsing for the STM32 UART flasher.
ihex = "3"

# MacOS
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
nusb = { version = "0.2", features = ["tokio"] }

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-keep-screen-on = "0.1"
tauri-plugin-safe-area-insets-css = "0.1"

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
nusb = { version = "0.2", features = ["tokio"] }
windows-sys = { version = "0.59", features = ["Win32_UI_HiDpi", "Win32_Foundation"] }

[features]
cli = ["clap"]

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.3"
# sync-secret-service uses DBus Secret Service (GNOME Keyring, KWallet)
keyring = { version = "3", features = ["sync-secret-service"] }
# nusb — used by the STM32 DFU flasher (dfu-nusb). Already a dep on
# macOS/Windows; added here for Linux parity.
nusb = { version = "0.2", features = ["tokio"] }
