[package]
name = "wiretap-backend"
version = "0.1.0"
edition = "2021"
description = "WireTAP backend gateway: binary CAN ingest + HTTP query API over TimescaleDB"
license = "MIT"

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1"
deadpool-postgres = "0.14"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
